docs/v0.2.0a200/_sources/reference/_autosummary/hpcflow.sdk.submission.shells.bash.WSLBash.rst.txt
hpcflow.sdk.submission.shells.bash.WSLBash
==========================================

.. currentmodule:: hpcflow.sdk.submission.shells.bash

.. autoclass:: WSLBash
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~WSLBash.format_array
      ~WSLBash.format_array_get_item
      ~WSLBash.format_commands_file
      ~WSLBash.format_env_var_get
      ~WSLBash.format_save_parameter
      ~WSLBash.format_source_functions_file
      ~WSLBash.format_stream_assignment
      ~WSLBash.get_command_file_launch_command
      ~WSLBash.get_direct_submit_command
      ~WSLBash.get_version_info
      ~WSLBash.get_wait_command
      ~WSLBash.prepare_JS_path
      ~WSLBash.prepare_element_run_dirs
      ~WSLBash.process_JS_header_args
      ~WSLBash.process_app_invoc_executable
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~WSLBash.os_args
      ~WSLBash.DEFAULT_EXE
      ~WSLBash.DEFAULT_WSL_EXE
      ~WSLBash.JS_ACT_MULTI
      ~WSLBash.JS_ACT_SINGLE
      ~WSLBash.JS_BLOCK_HEADER
      ~WSLBash.JS_BLOCK_LOOP
      ~WSLBash.JS_DIRECT_HEADER
      ~WSLBash.JS_ELEMENT_MULTI_ARRAY
      ~WSLBash.JS_ELEMENT_MULTI_LOOP
      ~WSLBash.JS_ELEMENT_SINGLE
      ~WSLBash.JS_ENV_SETUP_INDENT
      ~WSLBash.JS_EXT
      ~WSLBash.JS_FOOTER
      ~WSLBash.JS_FUNCS
      ~WSLBash.JS_HEADER
      ~WSLBash.JS_INDENT
      ~WSLBash.JS_MAIN
      ~WSLBash.JS_RUN
      ~WSLBash.JS_RUN_CMD
      ~WSLBash.JS_RUN_CMD_COMBINED
      ~WSLBash.JS_RUN_LOG_PATH_DISABLE
      ~WSLBash.JS_RUN_LOG_PATH_ENABLE
      ~WSLBash.JS_SCHEDULER_HEADER
      ~WSLBash.JS_SHEBANG
      ~WSLBash.executable
      ~WSLBash.linux_release_file
      ~WSLBash.shebang_executable
      ~WSLBash.WSL_executable
      ~WSLBash.WSL_distribution
      ~WSLBash.WSL_user
   
   